--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,12 @@ body{
     height: 300px;
     padding-left: 26px;
     padding-top: 16px;
+
 }
 .text{
-    padding-left: 20px;
+    padding-left: 22px;
     padding-bottom: 16px;
+    padding-right: 20px;
 }
 
 @media only screen and (min-width: 376px) and (max-width: 760px)  {
